# InternalDataCollectionV2

./: .gitignore  Understanding.md  analysis_9766hz.py  build_on_pi.sh  deploy_and_build.py  impedance_analysis.py  plan-cpp-rewrite.md  plan-phase2-tcp-streaming.md  run_ssh.sh  spi_minimal_test.cpp  spi_minimal_test2.cpp  spi_test.cpp  stream_pi_image.py
CUBoard/: CM4 (2).kicad_sch  ML0001 (1).md  Peripherals (1).kicad_sch  Power (1).kicad_sch  layout.kicad_sch
Cpp Implementation/: CMakeLists.txt  README.md
Cpp Implementation (Pi)/: CMakeLists.txt
Cpp Implementation/include/acquisition/: bus_worker.hpp  drdy_poller.hpp  engine.hpp
Cpp Implementation/include/ads1299/: controller.hpp  impedance.hpp  registers.hpp  spi_device.hpp  types.hpp
Cpp Implementation/include/hardware/: i2c_device.hpp  spi_bus.hpp
Cpp Implementation/include/logging/: csv_writer.hpp  spsc_ring.hpp
Cpp Implementation/include/streaming/: protocol.hpp  server.hpp
Cpp Implementation/src/: main.cpp
Cpp Implementation/src/acquisition/: bus_worker.cpp  drdy_poller.cpp  engine.cpp
Cpp Implementation/src/ads1299/: controller.cpp  spi_device.cpp
Cpp Implementation/src/hardware/: i2c_device.cpp  spi_bus.cpp  tca9534.cpp
Cpp Implementation/src/logging/: csv_writer.cpp
Cpp Implementation/src/streaming/: protocol.cpp  server.cpp
archive/: HeadsetServer1.py  HeadsetServer1_oneshot_backup.py  HeadsetServer1_working_backup.py  HeadsetViz.py  PerfectRunAchieved.py  analyze.py  compare_noise.py  diode_viz.py  oneshotstartuponeport.py  simpleviz_servertimed.py  viz.py
client/: analyze_offset_bug.py  channel_similarity.py  channel_similarity_distance.py  data_collection.py  eeg_comprehensive_analysis.py  firmware_issue1_analysis.py  firmware_issue1_recovery.py  firmware_issue1_transitions.py  gesture_paradigm.py  impedance_check.py  inductor_analysis.py  inductor_analysis_deep.py  inductor_analysis_ep567.py  inductor_analysis_part2.py  inductor_analysis_part3.py  rereference_car.py  rereference_p1d8ch3.py  simpleviz.py  stage1_common_mode.py  stage2_ecg_detection.py  stage3_band_coherence.py  task_a1_cross_port_timing.py  task_a2_transition.py  task_a3_spectral.py  task_a7_correlation.py  test_signal_sync_analysis.py  test_signal_sync_followup.py
info/: ADS1299-reference.md  ADS1299_Perfect_Startup_Sequence.md  ADS1299_datasheet_comprehensive.md  Changes.md  SESSION-NOTES-2026-02-15.md  artifact-investigation.md  corruption-and-timing.md  corruption-deep-analysis.md  cpp-embedded-init-solutions.md  data-analysis-init-failures.md  init-redesign-implementation.md  init-reliability.md  multi-scale-clustered-eeg.md  performance-engineer-init-solutions.md  phase-a-implementation-plan.md  phase-b2-implementation-plan.md  session-notes.md  signal-quality.md  slau443b.md  time-sync-analysis.md
pi/: OLDconfig.txt  SPI-DMA-SETUP.md  SPI45-DMA-GUIDE.md  WIFI-HOTSPOT.md  config.txt  dma-expand-overlay.dts  dma40-expand-overlay.dts  spi3-dma-overlay.dts  spi4-dma-overlay.dts  spi45-dma-mux.service  spi45-dma-mux.sh  spi5-dma-overlay.dts  verify-spi3-dma.sh
server/: ControllerPhase1.py
testing/: Controller.py  blink_test.py  check_corruption.py  csvviewer.py  dummy_client.py  (+7 more)
(+40 files in other folders)
